feat(snap): fix sonar complaints