@@ -53,7 +53,6 @@ import java.math.BigInteger;
 import java.util.*;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
-import java.util.stream.Collectors;
 
 import static co.rsk.net.sync.SnapSyncRequestManager.PeerSelector;
 
@@ -66,7 +65,7 @@ import static co.rsk.net.sync.SnapSyncRequestManager.PeerSelector;
  * <p>
  * After this process, the node should be able to start the long sync to the tip and then the backward sync to the genesis.
  */
-public class SnapshotProcessor implements InternalService {
+public class SnapshotProcessor implements InternalService, SnapProcessor {
 
     private static final Logger logger = LoggerFactory.getLogger("snapshotprocessor");
 
@@ -98,6 +97,7 @@ public class SnapshotProcessor implements InternalService {
     private volatile Boolean isRunning;
     private final Thread thread;
 
+    @SuppressWarnings("java:S107")
     public SnapshotProcessor(Blockchain blockchain,
                              TrieStore trieStore,
                              SnapshotPeersInformation peersInformation,
@@ -111,13 +111,14 @@ public class SnapshotProcessor implements InternalService {
                              int checkpointDistance,
                              int maxSenderRequests,
                              boolean checkHistoricalHeaders,
-                             boolean isParallelEnabled) {
+                             boolean isParallelEnabled) { // NOSONAR
         this(blockchain, trieStore, peersInformation, blockStore, transactionPool,
                 blockParentValidator, blockValidator, blockHeaderParentValidator, blockHeaderValidator,
                 chunkSize, checkpointDistance, maxSenderRequests, checkHistoricalHeaders, isParallelEnabled, null);
     }
 
     @VisibleForTesting
+    @SuppressWarnings("java:S107")
     SnapshotProcessor(Blockchain blockchain,
                       TrieStore trieStore,
                       SnapshotPeersInformation peersInformation,
@@ -348,7 +349,7 @@ public class SnapshotProcessor implements InternalService {
 
         logger.debug("Processing block headers response - chunk: [{}; {}]", chunk.get(0).getNumber(), chunk.get(chunk.size() - 1).getNumber());
 
-        if (!validateBlockHeaders(state, sender, chunk)) {
+        if (!validateBlockHeaders(state, chunk)) {
             state.fail(sender, EventType.INVALID_HEADER, "Invalid block headers received");
             return;
         }
@@ -362,7 +363,7 @@ public class SnapshotProcessor implements InternalService {
         }
     }
 
-    private boolean validateBlockHeaders(SnapSyncState state, Peer sender, List<BlockHeader> blockHeaders) {
+    private boolean validateBlockHeaders(SnapSyncState state, List<BlockHeader> blockHeaders) {
         for (int i = 0; i < blockHeaders.size(); i++) {
             BlockHeader blockHeader = blockHeaders.get(i);
             BlockHeader lastVerifiedBlockHeader = state.getLastVerifiedBlockHeader();
@@ -547,7 +548,7 @@ public class SnapshotProcessor implements InternalService {
         TrieDTOInOrderIterator it = new TrieDTOInOrderIterator(trieStore, block.getStateRoot(), request.getFrom(), to);
 
         // First we add the root nodes on the left of the current node. They are used to validate the chunk.
-        List<byte[]> preRootNodes = it.getPreRootNodes().stream().map((t) -> RLP.encodeList(RLP.encodeElement(t.getEncoded()), RLP.encodeElement(getBytes(t.getLeftHash())))).collect(Collectors.toList());
+        List<byte[]> preRootNodes = it.getPreRootNodes().stream().map(t -> RLP.encodeList(RLP.encodeElement(t.getEncoded()), RLP.encodeElement(getBytes(t.getLeftHash())))).toList();
         byte[] preRootNodesBytes = !preRootNodes.isEmpty() ? RLP.encodeList(preRootNodes.toArray(new byte[0][0])) : RLP.encodedEmptyList();
 
         // Then we add the nodes corresponding to the chunk.
@@ -564,7 +565,7 @@ public class SnapshotProcessor implements InternalService {
         byte[] nodesBytes = RLP.encodeList(trieEncoded.toArray(new byte[0][0]));
         byte[] lastNodeHashes = last != null ? RLP.encodeList(RLP.encodeElement(getBytes(last.getLeftHash())), RLP.encodeElement(getBytes(last.getRightHash()))) : RLP.encodedEmptyList();
         // Last we add the root nodes on the right of the last visited node. They are used to validate the chunk.
-        List<byte[]> postRootNodes = it.getNodesLeftVisiting().stream().map((t) -> RLP.encodeList(RLP.encodeElement(t.getEncoded()), RLP.encodeElement(getBytes(t.getRightHash())))).collect(Collectors.toList());
+        List<byte[]> postRootNodes = it.getNodesLeftVisiting().stream().map(t -> RLP.encodeList(RLP.encodeElement(t.getEncoded()), RLP.encodeElement(getBytes(t.getRightHash())))).toList();
         byte[] postRootNodesBytes = !postRootNodes.isEmpty() ? RLP.encodeList(postRootNodes.toArray(new byte[0][0])) : RLP.encodedEmptyList();
         byte[] chunkBytes = RLP.encodeList(preRootNodesBytes, nodesBytes, firstNodeLeftHash, lastNodeHashes, postRootNodesBytes);
 
@@ -592,7 +593,7 @@ public class SnapshotProcessor implements InternalService {
             logger.debug("State chunk dequeued from: {} - expected: {}", nextMessage.getFrom(), nextExpectedFrom);
             if (nextMessage.getFrom() == nextExpectedFrom) {
                 try {
-                    processOrderedStateChunkResponse(state, peer, queue.poll());
+                    processOrderedStateChunkResponse(state, queue.poll());
                     state.setNextExpectedFrom(nextExpectedFrom + chunkSize * CHUNK_ITEM_SIZE);
                 } catch (Exception e) {
                     logger.error("Error while processing chunk response. {}", e.getMessage(), e);
@@ -620,7 +621,7 @@ public class SnapshotProcessor implements InternalService {
         requestStateChunk(state, alternativePeer, responseMessage.getFrom(), responseMessage.getBlockNumber());
     }
 
-    private void processOrderedStateChunkResponse(SnapSyncState state, Peer peer, SnapStateChunkResponseMessage message) throws Exception {
+    private void processOrderedStateChunkResponse(SnapSyncState state, SnapStateChunkResponseMessage message) throws IllegalStateException {
         logger.debug("Processing State chunk received from {} to {}", message.getFrom(), message.getTo());
 
         RLPList nodeLists = RLP.decodeList(message.getChunkOfTrieKeyValue());
@@ -679,7 +680,7 @@ public class SnapshotProcessor implements InternalService {
             }
         } else {
             logger.error("Error while verifying chunk response: {}", message);
-            throw new Exception("Error verifying chunk.");
+            throw new IllegalStateException("Error verifying chunk.");
         }
     }
 
